Fix button as link text alignment

--- a/layout/default/css/form.less
+++ b/layout/default/css/form.less
@@ -81,6 +81,7 @@ textarea.textinput {
 
   a&, div& {
     line-height: @sizeButton - 2*@buttonBorderWidth;
+    text-align: center;
   }
 }
 
